# vad_alsa_c

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
include/: config.h  def.h  pcm_capture.h  vad_moatt.h
src/: fft.c  main.c  pcm_capture.c  vad_moatt.c
